--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -36,7 +36,7 @@
 						<span>Dictionary</span>
 					</button>
 					<button type="button" class="btn btn-danger superpanel_menu_btn" id="rmv_all_bkmk_btn" title="Remove all bookmarks under this series"
-						action="{{url_for('library_series_toc_bookmark_all', series_code=series.code)}}">
+						action="{{url_for('library_series_toc_bookmark_all', series_code=series.code)}}" {{'disabled' if series.latest_ch == 0}}>
 						<ion-icon name="bookmarks" style="font-size: 1rem; margin-bottom: -0.1rem;"></ion-icon>
 						<span>Remove All Bookmarks</span>
 					</button>
@@ -58,11 +58,13 @@
 				<div class="toc_chapter_listing">
 					{% if series.latest_ch == 0 %}
 						<!-- No chapters to display -->
-						<div class="no_chapters_img_div">
-							<img src="{{url_for('static', filename='0ee66d20ef99b9ee6753076213df9635.jpg')}}" class="no_chapters_img">
-						</div>
-						<div class="no_chapters_text_div">
-							No chapters here. Try hitting "update"
+						<div class="page_empty_div" id="no_chapters_div">
+							<div class="page_empty_img_div" id="no_chapters_img_div">
+								<img src="{{url_for('static', filename='toc_nothing_here.jpg')}}" class="page_empty_img" id="no_chapters_img">
+							</div>
+							<div class="page_empty_text_div" id="no_chapters_text_div">
+								No chapters here. Try hitting <span class="text-warning font-weight-bold">Update</span>
+							</div>
 						</div>
 					{% else %}
 						<!-- Non-empty chapter directory -->
