--- a/app/static/main.css
+++ b/app/static/main.css
@@ -966,24 +966,30 @@ table.entry_info_table{
 .dictionary_entry{
   position: relative;
   display: flex;
-  background: #ff8f2c40;
+  border: 1px solid #ff8f2c;
   border-right: none;
+  border-left: none;
   margin: 0.75rem 0;
   box-sizing: border-box;
-  height: 4rem;
+  height: 5rem;
+}
+.dictionary_entry:hover .dictionary_entry_action_bar{
+  visibility: visible;
+  opacity: 1;
 }
 .dictionary_entry_abbr{
-  width: 20rem;
+  display: flex;
+  width: 25rem;
   color: white;
   font-weight: bolder;
   font-size: 1.5rem;
   font-family: monospace;
-  border-bottom: 4rem solid var(--dictionary_entry_color_primary);
+  border-bottom: 5rem solid var(--dictionary_entry_color_primary);
   border-right: 1.5rem solid transparent;
 }
 .dictionary_entry_abbr_text{
-  padding: 0.5rem 2rem;
-  height: 4rem;
+  padding: 1rem 2rem;
+  height: 5rem;
   line-height: 3rem;
 }
 .dictionary_entry_body{
@@ -1001,30 +1007,39 @@ table.entry_info_table{
 .dictionary_entry_action_bar{
   width: fit-content;
   display: flex;
+  visibility: hidden;
+  opacity: 0;
   color: var(--series_entry_text_color);
   font-size: 1.5rem;
+  transition: visibility 0s, opacity 0.1s linear;
 }
 .dictionary_entry_action_div{
-  width: 4rem;
+  height: 100%;
   text-align: center;
-  margin: 0 1px;
-  background: #ffad64;
+  margin: auto 1px;
+  padding: 0.85rem 2.3rem;
+  background: #ff7043;
   color: white;
   cursor: pointer;
 }
 .dictionary_entry_action_div ion-icon{
-  height: 100%;
   font-size: 1.3rem;
 }
 .dictionary_entry_action_div:hover{
-  filter: brightness(1.1);
+  filter: brightness(1.3);
+}
+.dictionary_entry_action_label{
+  font-family: monospace;
+  font-size: 1.1rem;
+  font-variant: all-petite-caps;
 }
 .dictionary_toggle_enable_div{
-  width: 6rem;
-  text-align: center;
-  margin: 0 1px;
-  background: #ff8f2c;
+  height: fit-content;
+  line-height: 5rem;
   color: white;
+  text-align: center;
+  padding-top: 4px;
+  padding-left: 1.5rem;
 }
 .dictionary_toggle_enable_div ion-icon{
   margin: auto;
