--- a/app/templates/dictionary_entry.html
+++ b/app/templates/dictionary_entry.html
@@ -2,6 +2,10 @@
 	<div class="dictionary_entry {{'dictionary_entry_disabled' if not dictionary.enabled}}" id="dict_{{dictionary.abbr}}"
 		data-fname="{{dictionary.fname}}" data-abbr="{{dictionary.abbr}}">
 		<div class="dictionary_entry_abbr">
+			<div class="dictionary_toggle_enable_div action_toggle_enable" title="Enable/Disable dict"
+				action="{{url_for('dictionaries_toggle_entry', dict_abbr=dictionary.abbr)}}">
+				<ion-icon name="{{'checkbox' if dictionary.enabled else 'square-outline'}}"></ion-icon>
+			</div>
 			<div class="dictionary_entry_abbr_text">
 				{{dictionary.abbr}}
 			</div>
@@ -14,16 +18,15 @@
 				<div class="dictionary_entry_action_div action_download" title="Download dict"
 					action="{{url_for('dictionaries_download_entry', dict_fname=dictionary.fname)}}">
 					<ion-icon name="save"></ion-icon>
+					<div class="dictionary_entry_action_label"> Save </div>
 				</div>
 				<div class="dictionary_entry_action_div action_upload" title="Upload and Replace dict">
 					<ion-icon name="arrow-up-circle"></ion-icon>
+					<div class="dictionary_entry_action_label"> Upload </div>
 				</div>
 				<div class="dictionary_entry_action_div action_edit" title="Edit dict contents">
 					<ion-icon name="create"></ion-icon>
-				</div>
-				<div class="dictionary_toggle_enable_div action_toggle_enable" title="Enable/Disable dict"
-					action="{{url_for('dictionaries_toggle_entry', dict_abbr=dictionary.abbr)}}">
-					<ion-icon name="{{'checkbox' if dictionary.enabled else 'square-outline'}}"></ion-icon>
+					<div class="dictionary_entry_action_label"> Edit </div>
 				</div>
 			</div>
 		</div>
