--- a/app/templates/modals/register_novel.html
+++ b/app/templates/modals/register_novel.html
@@ -14,25 +14,25 @@
           <fieldset class="form-group" style="margin: 0">
             <div class="form-group form_group_cust">
               {{ form.title.label(class="form-control-label label_cust") }}
-              <div class="form_input_div">
+              <div class="form_input_div md-form active-cyan-2">
                 {{ form.title(class="form-control input_cust", placeholder="Whatever Novel Title You Want") }}
               </div>
             </div>
             <div class="form-group form_group_cust">
               {{ form.abbr.label(class="form-control-label label_cust") }}
-              <div class="form_input_div">
+              <div class="form_input_div md-form active-cyan-2">
                 {{ form.abbr(class="form-control input_cust", placeholder="WhateverAbbr") }}
               </div>
             </div>
             <div class="form-group form_group_cust">
               {{ form.series_host.label(class="form-control-label label_cust") }}
-              <div class="form_input_div">
+              <div class="form_input_div md-form active-cyan-2">
                 {{ form.series_host(class="form-control input_cust") }}
               </div>
             </div>
             <div class="form-group form_group_cust">
               {{ form.series_code.label(class="form-control-label label_cust") }}
-              <div class="form_input_div">
+              <div class="form_input_div md-form active-cyan-2">
                 {{ form.series_code(class="form-control input_cust", placeholder="http://ncode.syosetu.com/XXXXXXX") }}
               </div>
               <button type="button" class="btn" id="host_search_engine_btn" title="Go to this host's search engine">
