--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -33,7 +33,6 @@
 	{% block content %}
 	{% endblock content %}
 
-
 	<!-- JQuery -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<!-- Bootstrap tooltips -->
@@ -49,16 +48,9 @@
 	<!-- File Saver -->
 	<script src="https://cdn.rawgit.com/eligrey/FileSaver.js/5ed507ef8aa53d8ecfea96d96bc7214cd2476fd2/FileSaver.min.js"></script>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    <!-- Additional javascript third party dependencies -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
-    <!-- Bootstrap 4 -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
-
-	<!-- Main javascript -->
-	<script type="text/javascript" src="{{ url_for('static', filename='wn_customtrans.js')}}"></script>
-	<!-- Custom javascript (per page basis) -->
+	<!-- Main Javascript -->
+	<script type="text/javascript" src="{{ url_for('static', filename='wn_customtrans.js') }}"></script>
+	<!-- Custom Javascript (per page basis) -->
 	<script type="text/javascript">
 		{% block script_area %}
 		{% endblock %}
