--- a/app/templates/modals/edit_novel.html
+++ b/app/templates/modals/edit_novel.html
@@ -14,13 +14,13 @@
           <fieldset class="form-group" style="margin: 0">
             <div class="form-group form_group_cust">
               {{ form.title.label(class="form-control-label label_cust") }}
-              <div class="form_input_div">
+              <div class="form_input_div md-form active-cyan-2">
                 {{ form.title(class="form-control input_cust") }}
               </div>
             </div>
             <div class="form-group form_group_cust">
               {{ form.abbr.label(class="form-control-label label_cust") }}
-              <div class="form_input_div">
+              <div class="form_input_div md-form active-cyan-2">
                 {{ form.abbr(class="form-control input_cust") }}
               </div>
             </div>
