--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -16,8 +16,10 @@
 	<!-- Material Design Bootstrap -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 
-	<!-- Typeface, Favicon, Stylesheet links -->
+	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap" rel="stylesheet">
+	<!-- Typeface, Favicon, Stylesheet links -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css')}}">
   	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
