--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -1,93 +1,53 @@
-{% from "series_entry.html" import series_entry %}
-{% from "flash_alert.html" import flash_alert %}
 {% from "super_navpanel.html" import super_navpanel %}
-{% from "modals/register_novel.html" import register_novel_modal %}
-{% from "modals/edit_novel.html" import edit_novel_modal %}
-{% from "modals/remove_novel.html" import remove_novel_modal %}
+{% from "flash_alert.html" import flash_alert %}
 
 {% extends 'general_layout.html' %}
 {% block content %}
-	<section class="section_library">
+	<section class="section_dictionary_edit">
 		<!-- Back button -->
 		{% if back_href is defined %}
 			{{super_navpanel(back_href)}}
 		{% endif%}
 
-		<!-- Set up the modals needed for this  -->
-		{{ register_novel_modal(reg_form) }}
-		{{ edit_novel_modal(edit_form)}}
-		{{ remove_novel_modal(rmv_form)}}
-
-		<!-- Progress bar -->
-		<div class="library_update_progress_bar_display">
-			<div class="library_update_progress_bar_label">
-				<div class="spinner-border text-warning" role="status" id="library_update_spinner">
-					<span class="sr-only"></span>
-				</div>
-				<div class="library_update_progress_bar_info">
-					Fetching updates for <span id="update_info_series"></span>
-				</div>
-			</div>
-			<div class="library_update_progress_bar_container">
-				<div class="progress" style="height: 0.5rem; background: #ffe26e;">
-					<div class="progress-bar bg-warning" id="update_progress_bar"
-						role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-				</div>
-			</div>
-		</div>
-
 		<!-- Main content -->
-		<div class="banner" id="library_banner">
-			<div class="banner_icon" id="library_icon">
-				<ion-icon name="book"></ion-icon>
+		<div class="banner" id="dictionary_edit_banner">
+			<div class="banner_icon" id="dictionary_edit_icon">
+				<ion-icon name="create"></ion-icon>
 			</div>
-			<div class="banner_title" id="library_title">Library</div>
+			<div class="banner_title" id="dictionary_edit_title">Edit Dictionary</div>
 		</div>
-		<div class="library_body">
-			<div class="superpanel" id="library_superpanel">
-				<!-- Register button -->
-				<button type="button" class="btn btn-light-green superpanel_menu_btn modal_trigger" id="menu_library_register_btn" data-toggle="modal"
-					data-target="#register_novel_modal_push" title="Add Series">
-					<ion-icon name="add-outline"></ion-icon>
-					<span> Register </span>
-				</button>
-				<!-- Update button -->
-				<button type="button" class="btn btn-yellow superpanel_menu_btn" id="menu_library_update_btn" title="Update Library" {{'disabled' if series|length == 0}}>
-					<ion-icon name="sync-outline"></ion-icon>
-					<span> Update </span>
-				</button>
-			</div>
-
-			<div class="superpanel_menu_searchbar_div" id="menu_library_searchbar_div">
-				<div class="md-form active-cyan-2 mb-3" id="menu_library_searchbar">
-					<input class="form-control" type="text" placeholder="Search Library" aria-label="Search">
-				</div>
-			</div>
-
-			<div class="flashpanel" id="library_flashpanel">
+		<div class="dictionary_edit_body">
+			<div class="flashpanel" id="dictionary_edit_flashpanel">
 				<!-- Flashed messages -->
 				{% with messages = get_flashed_messages(with_categories=true) %}
 					{{ flash_alert(messages) }}
 				{% endwith %}
 			</div>
 
-			<div class="mainpanel" id="library_mainpanel">
-				<!-- Novel entries -->
-				{% if series|length == 0 %}
-					<!-- No chapters to display -->
-					<div class="page_empty_div" id="no_series_div">
-						<div class="page_empty_img_div" id="no_series_img_div">
-							<img src="{{url_for('static', filename='library_nothing_here.jpg')}}" class="page_empty_img" id="no_series_img">
-						</div>
-						<div class="page_empty_text_div "id="no_series_text_div">
-							Nothing to see here. Start by hitting <span class="light-green-text font-weight-bold">Register</span>
-						</div>
+			<div class="mainpanel" id="dictionary_edit_mainpanel">
+				<div class="dictionary_edit_toolbelt w-100">
+					<div class="dictionary_edit_btn_div">
+						<!-- Register button -->
+						<button type="button" class="btn btn-dark-green dictionary_edit_toolbelt_btn"
+							id="menu_dictionary_edit_save_btn" title="Save changes">
+							<ion-icon name="checkmark-outline"></ion-icon>
+							<span> Save </span>
+						</button>
+						<button type="button" class="btn btn-danger dictionary_edit_toolbelt_btn"
+							id="menu_dictionary_edit_discard_btn" title="Discard changes">
+							<ion-icon name="close-outline"></ion-icon>
+							<span> Discard </span>
+						</button>
+						<button type="button" class="btn btn-elegant dictionary_edit_toolbelt_btn"
+							id="menu_dictionary_edit_fullscreen_btn" title="Toggle fullscreen">
+							<ion-icon name="scan-outline"></ion-icon>
+						</button>
 					</div>
-				{% else %}
-					{% for novel in series %}
-						{{ series_entry(novel) }}
-					{% endfor %}
-				{% endif %}
+					<div class="dictionary_edit_abbr_tag">
+						{{dict_fname}}
+					</div>
+				</div>
+				<textarea id="dictionary_editor">{{dict_content}}</textarea>
 			</div>
 		</div>
 	</section>
@@ -95,6 +55,6 @@
 
 {% block script_area %}
 	$(document).ready(function() {
-		setupLibrary();
+		setupDictionaryEdit();
 	});
 {% endblock%}
