--- a/app/templates/series_entry.html
+++ b/app/templates/series_entry.html
@@ -44,7 +44,8 @@
 				<span> Table of Contents </span>
 				<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="library-outline"></ion-icon>
 			</a>
-			<a class="series_entry_btn series_dict" title="Go to series dictionary">
+			<a class="series_entry_btn series_dict" title="Go to series dictionary"
+				href="{{url_for('dictionaries_edit', dict_fname=novel.dict_fname)}}">
 				<span> Dictionary </span>
 				<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="reader"></ion-icon>
 			</a>
