--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -47,7 +47,7 @@
 						{{dict_fname}}
 					</div>
 				</div>
-				<textarea id="dictionary_editor">{{dict_content}}</textarea>
+				<textarea id="dictionary_editor" style="display: none;">{{dict_content}}</textarea>
 			</div>
 		</div>
 	</section>
